# 1c-barcode-generator

./: Barcode(new).cpp  CMakeLists.txt  DataMatrixEncoder.cpp  DataMatrixEncoder.h  SvgRenderer.cpp  SvgRenderer.h  datamatrix_encoder.cpp  datamatrix_encoder.h  test_datamatrix_encoder.cpp
